apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5678
              name: http
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
          resources:
            limits:
              cpu: "1.0"
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: n8n-storage
          hostPath:
            path: /home/ubuntu/codes/n8n/data
            type: DirectoryOrCreate
      # Target MTL0 (ARM64) node.
      nodeSelector:
        kubernetes.io/arch: arm64
